Added link to loadBalancer in application-page and applicationinstance-page (GUI)

--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -9,7 +9,7 @@
 
   <li>In load balancers:
     <ul ng-repeat="lbForApp in app.loadBalancers">
-      <li>{{lbForApp.name}} ({{lbForApp.id}})</li>
+      <li><a href = "#/lb/{{lbForApp.id}}"> {{lbForApp.name}} ({{lbForApp.id}})</a></li>
     </ul>
   </li>
 
