--- a/gateway-app/src/main/resources/web/gateway/appGroup.html
+++ b/gateway-app/src/main/resources/web/gateway/appGroup.html
@@ -23,7 +23,7 @@ Nothing more here..
             <div class="form-group">
                 <label for="inAppName">Name</label>
                 <input type="text" ng-model="newApp.name" class="form-control" id="inAppName" name="name"
-                       ng-pattern="/^\S$/"
+                       ng-pattern="/^\S+$/"
                        required
                        placeholder="Enter application name">
               <span class="bg-danger" ng-show="createAppForm.name.$error.pattern">Invalid name: Cannot contain white-spaces. Use - instead</span>
